--- a/fontend/src/componenets/Events/style.css
+++ b/fontend/src/componenets/Events/style.css
@@ -18,6 +18,7 @@
 
 .events-card p {
   margin: 0.5rem 0;
+  color: black;
 }
 .edetails{
   display: flex;
@@ -47,6 +48,7 @@
   top: 0;
   z-index: 999;
   display: none;
+  color: #333;
 }
 
 .popup-card {
@@ -96,6 +98,9 @@
   display: flex;
   justify-content: space-around;
 }
+.event-info p{
+  color: #333;
+}
 
  h2 {
   margin: 0 0 0.5rem;
@@ -137,4 +142,22 @@
   background: #489aff57;
   padding: 2px 4px 4px 5px;
   border-radius: 3px;
+}
+.btn-section-book{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.btn-section-book > .submit-btn{
+  background-color: #695e69;
+  width: 50%;
+}
+.btn-section-book button{
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  font-size: 19px;
+}
+.container-create-booking p{
+  color: blueviolet;
 }
