--- a/fontend/src/pages/organisepage/Organisepage.css
+++ b/fontend/src/pages/organisepage/Organisepage.css
@@ -1,5 +1,9 @@
 .organise{
+  margin-top: 20px ;
+}
+.organise-items{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
 }
