--- a/fontend/src/componenets/navbar/navbar.css
+++ b/fontend/src/componenets/navbar/navbar.css
@@ -10,14 +10,16 @@ nav{
     position: relative;
     overflow: hidden;
     height: 70px;
-    /* You can adjust the height to fit your design */
     background-color: #f8f9fa;
-    /* You can adjust the background color for your design */
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    /* You can adjust the shadow to fit your design */
+   
 }
 
-
+/* .navbar-container {
+    width: 100%;
+    background-color: #dcdcdc;
+    
+} */
 .navbar-nav {
     display: flex;
     align-items: center;
@@ -29,6 +31,16 @@ nav{
     padding: 0;
     width: 100%;
 }
+.logo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0 auto;
+    height: 100%;
+}
+
+
+
 .auth{
        display: flex;
         align-items: center;
