--- a/fontend/src/componenets/mybookingcomponent/mybooking.css
+++ b/fontend/src/componenets/mybookingcomponent/mybooking.css
@@ -52,6 +52,59 @@
     font-size: 17px;
     font-weight: bold;
 }
+.viewmorebtn{ 
+    display: flex;
+    justify-content: center;
+    margin: 17px;
+}
+.viewmorebtn button{
+    border: none;
+    background: none;
+    font-size: 17px;
+    color: #009dff;
+    transition: 1s;
+}
+.viewmorebtn button:hover{
+    color: #000000;
+}
+.all-details-view{
+    position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1000;
+}
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 80%;
+    max-width: 500px;
+    text-align: left;
+    position: relative;
+}
+.popup-content p{
+    color: black;
+    margin: 10px;
+    font-weight: bold;
+}
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    color: #000000;
+}
+
+
 /* Responsive adjustments */
 @media (min-width: 600px) {
     .booking-card {
