--- a/fontend/src/componenets/organise/organisecom.css
+++ b/fontend/src/componenets/organise/organisecom.css
@@ -10,6 +10,7 @@
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     display: flex;
+    justify-content: center;
     flex-direction: column;
     margin: 1rem;
     padding: 1rem;
@@ -24,4 +25,13 @@
 .edetails {
     display: flex;
     justify-content: space-around;
+}
+
+.more-btn-organise button{
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: blueviolet;
+    margin: 18px;
+    font-size: 15px;
 }
