--- a/fontend/src/componenets/Events/style.css
+++ b/fontend/src/componenets/Events/style.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 1rem;
+  /* margin: 1rem; */
 }
 
 .events-card {
@@ -14,6 +14,7 @@
   margin: 1rem;
   padding: 1rem;
   width: 300px;
+  height:250px ;
 }
 
 .events-card p {
