--- a/fontend/src/pages/homepage/home.css
+++ b/fontend/src/pages/homepage/home.css
@@ -143,7 +143,7 @@
     overflow: hidden;
  }
 .event-card {
-    width: 95%;
+    width: 100%;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -206,7 +206,7 @@
 .event-card-container {
     display: flex;
     flex-direction: row;
-    height: 300px;
+    height: 400px;
     margin: 3px;
     overflow-x: auto;
     animation: slideUp 30s linear infinite;
@@ -276,7 +276,7 @@
 .recent-card-container {
         display: flex;
         flex-direction: row;
-        height: 300px;
+        height: 400px;
         margin: 3px;
         overflow-x: auto;
         animation: slideUp 30s linear infinite;
@@ -330,13 +330,13 @@
     }
 } */
 
-.linkcard{
+/* .linkcard{
     text-decoration: none;
     transition: 0.1s;
 }
 .linkcard:hover{
  text-decoration: none;
-}
+} */
 
 /* patner-section */
 .our-patner{
