--- a/fontend/src/pages/homepage/home.css
+++ b/fontend/src/pages/homepage/home.css
@@ -343,6 +343,7 @@
         background: linear-gradient(to right, #1a5cb3cb, #ac886c);
         padding: 20px;
         text-align: center;
+        margin-top: 20px;
 }
 .our-patner h2{
     color: white;
