--- a/fontend/src/pages/Oranization/vieworg.css
+++ b/fontend/src/pages/Oranization/vieworg.css
@@ -35,7 +35,11 @@
     padding: 20px;
     border-radius: 8px;
 }
-
+.form-popup button~button{
+    width: 100%;
+    background: transparent;
+    border-radius: 5px;
+}
 .form-container {
     display: flex;
     flex-direction: column;
@@ -64,6 +68,23 @@
     padding: 10px;
     margin-right: 10px;
     cursor: pointer;
+    border: 1px solid black;
+    background-color: transparent;
+}
+
+.items button ~ button {
+    padding: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    border: 1px solid rgb(0, 94, 255);
+}
+
+.items button~button~button {
+    padding: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    border: 1px solid rgb(234, 0, 255);
+    background-color: transparent;
 }
 
 /* Responsive design */
@@ -82,4 +103,50 @@
     .items button:last-child {
         margin-bottom: 0;
     }
+}
+
+
+
+/* organise-date-form */
+
+.form-popup-update-details{
+    margin-top: 20px;
+}
+.form-popup-update-details ul{
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+.form-popup-update-details ul>li{
+    background-color: rgba(0, 255, 255, 0.293);
+    padding: 7px;
+    border: 1px solid green;
+    border-radius: 7px;
+}
+.add-service{
+    margin: 10px;
+    padding: 8px;
+    border: 1px solid black;
+    background: transparent;
+    cursor: pointer;
+}
+.remove-service{
+    margin-left: 10px;
+    background:transparent;
+    cursor:grab;
+    border: 1px solid rgb(117, 82, 82);
+}
+.selectbtn{
+    padding: 10px;
+    width: 100%;
+}
+.update-cancel-org-btn{
+    width: 100%;
+    height: 37px;
+    background-color:rgba(9, 1, 255, 0.672) ;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    margin: 20px 0px 20px;
 }
